<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_fav"
        android:title="@string/favourite"
        app:showAsAction="always"
        android:icon="@drawable/fav"/>

    <item
        android:id="@+id/item_comment"
        android:title="@string/comments"
        app:showAsAction="always"
        android:icon="@drawable/comment"
        android:visible="false"/>

    <item
        android:id="@+id/item_share"
        android:title="@string/share"
        app:showAsAction="always"
        android:icon="@drawable/share"
        android:visible="false"/>

    <item
        android:id="@+id/item_report"
        android:title="@string/report"
        app:showAsAction="never"
        android:icon="@drawable/report"/>

</menu>