<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_select_cat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar_select_cat">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/msg_selct_cat"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_select_cat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll"
            android:layout_below="@+id/tv"
            android:padding="15dp"/>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_btn_round_primary"/>

        <Button
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/bg_btn_round_accent"/>

        </LinearLayout>

    </RelativeLayout>

    <include
        layout="@layout/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_select_cat"
        android:visibility="gone" />

    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        android:id="@+id/progressBar_select_cat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:cpb_colors="@array/pocket_bar_colors"
        app:cpb_max_sweep_angle="300"
        app:cpb_min_sweep_angle="10"
        app:cpb_rotation_speed="1.0"
        app:cpb_stroke_width="4dp"
        app:cpb_sweep_speed="1.0" />

</RelativeLayout>