<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/tv_cat_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/tv_title_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/tv_date_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:textSize="12sp"/>

                <WebView
                    android:id="@+id/webView_news_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/bg_cardview"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    android:src="@color/colorPrimary"
                    app:riv_corner_radius="2dp" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:paddingTop="10dp"
                    android:paddingBottom="8dp"
                    android:text="@string/comments"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_viewall_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="10dp"
                    android:text="@string/view_all"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/bg_cardview"
                android:paddingStart="17dp"
                android:paddingLeft="17dp"
                android:paddingTop="7dp"
                android:paddingEnd="7dp"
                android:paddingRight="7dp"
                android:paddingBottom="7dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/iv_details_user"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:scaleType="centerCrop"
                    app:riv_corner_radius="20dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/iv_details_user"
                    android:layout_toRightOf="@+id/iv_details_user"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_details_comment"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/leave_comments"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_details_comment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="?attr/selectableItemBackground"
                        android:contentDescription="@string/image"
                        android:padding="5dp"
                        android:src="@drawable/send_long" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/iv_details_user"
                    android:layout_marginStart="45dp"
                    android:layout_marginLeft="45dp"
                    android:background="@color/black_50" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comment_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <TextView
                android:id="@+id/tv_empty_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/no_comment"
                android:textSize="16sp"
                android:visibility="gone" />

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/pb_details"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:indeterminate="true"
                app:cpb_color="#FFee44"
                app:cpb_colors="@array/pocket_bar_colors"
                app:cpb_max_sweep_angle="300"
                app:cpb_min_sweep_angle="10"
                app:cpb_rotation_speed="1.0"
                app:cpb_stroke_width="4dp"
                app:cpb_sweep_speed="1.0" />


        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>